# windeployqt

./: CMakeLists.txt  main.cpp  qmlutils.cpp  qmlutils.h  utils.cpp
